fix(promotions): honor category voucher conditions